<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/auth_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/sign_up_title"

        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/sign_up_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:background="@android:color/white"
        android:layout_marginTop="@dimen/margin_sign_up_edit"
        android:hint="@string/sign_up_login"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/sign_up_email"
        android:background="@android:color/white"
        android:layout_marginTop="@dimen/margin_sign_up_edit"
        android:id="@+id/sign_up_email" />

    <EditText
        android:id="@+id/sign_up_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/sign_up_password"
        android:layout_marginTop="@dimen/margin_sign_up_edit"
        android:background="@android:color/white"
        />

    <EditText
        android:id="@+id/sign_up_confirm_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="@android:color/white"
        android:layout_marginTop="@dimen/margin_sign_up_edit"
        android:hint="@string/sign_up_confirm_password"
        />

    <Button
        android:id="@+id/sign_bt_sign_up"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_sign_up" />

</LinearLayout>