<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/auth_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/sign_title"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/sign_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/sign_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"

        />

    <Button
        android:id="@+id/sign_bt_sign"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_sign" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_title1" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sign_bt_facebook"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="f" />

        <Button
            android:id="@+id/sign_bt_instagram"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="i" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/sign_bt_signUp"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sign_title_signup"
            android:textColor="@drawable/button_text_color_link" />

        <TextView
            android:id="@+id/sign_bt_forget_password"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sign_forget_password"
            android:textColor="@drawable/button_text_color_link" />

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/sign_title2"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/sign_user_agreement"
        android:id="@+id/sign_user_agreement"
        android:textColor="@drawable/button_text_color_link" />


</LinearLayout>